# MantisFetch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  i18n.py  mantisfetch_deliverables.py  mantisfetch_server.py  pyproject.toml  requirements-ocr-arm64.txt  requirements.txt
.claude/commands/: fix.md  implement.md
.github/workflows/: ci.yml
configs/document_profiles/: bid_cn.json  contract_cn.json
configs/searxng/: settings.cn.yml  settings.yml
docs/: MIGRATION-to-mantisfetch.md  agent-deployment-prompt.md  downstream-content-type-adaptation.md  layout-sidecar-contract.md  mantisfetch_mcp_integration_patch.md  mantisfetch_search_capability_patch.md  opendataloader-comparative-spike.md  real-document-validation-batch.md  refactor-modularization-design.md  scanned-contract-invoice-table-plan.md  sidecar-performance-guardrails.md
larkscout_common/: atomic.py  storage.py
mantisfetch_common/: __init__.py  atomic.py  doc_index_store.py  metrics.py  paths.py  search_cache.py  storage.py
providers/: __init__.py  base.py  errors.py  failover.py  gemini.py  openai_compat.py  sentinel.py  vendor_profiles.py
providers/search/: __init__.py  base.py  bocha.py  brave.py  searxng.py  tavily.py
scripts/: real_doc_validation.py  sidecar_metrics.py
sdk/python/: larkscout_client.py  mantisfetch_client.py  pyproject.toml
sdk/python/examples/: async_example.py  quickstart.py  search_research.py
services/browser/: larkscout_browser.py
services/browser/larkscout_browser/: __init__.py  models.py  ranking.py  (+2 more)
services/docreader/: larkscout_docreader.py  paddle_ocr_worker.py
services/mcp/: mantisfetch_mcp.py
skills/: larkscout-docreader-SKILL-cn.md  larkscout-docreader-SKILL.md  mantisfetch-browser-SKILL-cn.md  mantisfetch-browser-SKILL.md  mantisfetch-docreader-SKILL-cn.md  mantisfetch-docreader-SKILL.md  mantisfetch-mcp-SKILL-cn.md  mantisfetch-mcp-SKILL.md
tasks/: todo.md
tests/: conftest.py  test_action_budget_packer.py  test_action_hardening.py  test_api_contract.py  test_atomic_guards.py  test_browser_evaluate_smoke.py  test_concurrency.py  test_csv_parse.py  test_deferred_summary_guard.py  test_deliverables.py  test_doc_index_store.py  test_docx_zip_and_form_limits.py  test_dual_provider.py  test_failure_sentinel.py  test_header_footer_strip.py  test_health.py  test_layout_sidecar_contract.py  test_library_endpoints.py  test_markdown_table_extraction.py  test_mcp_search.py  test_mcp_server.py  test_metrics.py  test_ocr_worker_protocol.py  test_parsing_correctness.py  test_pdf_ocr_render_memory.py  test_providers.py  test_real_doc_validation.py  test_region_crop_export.py  test_rest_auth.py  test_robustness.py  test_schema_consistency.py  test_sdk.py  test_search_endpoints.py  test_search_providers.py  test_search_text_cache.py  test_sectioning_and_locale.py  test_security.py  test_server_tls.py  test_sidecar_metrics.py  test_summary_llm_concurrency.py  (+8 more)
tests/e2e/: conftest.py
(+39 files in other folders)
