[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantisfetch-client"
version = "0.1.0"
description = "Python client SDK for the MantisFetch data collection and document parsing API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ReadyForAI", email = "opensource@readyfor.ai" }]
requires-python = ">=3.11"
keywords = ["mantisfetch", "web-scraping", "document-parsing", "llm", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ReadyForAI/MantisFetch"
Repository = "https://github.com/ReadyForAI/MantisFetch"
Documentation = "https://github.com/ReadyForAI/MantisFetch/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["mantisfetch_client"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
